--- a/webarm/web/templates/web/index.html
+++ b/webarm/web/templates/web/index.html
@@ -71,15 +71,31 @@
       <!-- CONTENT -->  
       <div class="col-10 m-0 p-0">
         <div class="content-height">
-
           <div class="tab-content p-3" id="v-pills-tabContent">
             <!-- Обзор -->
             <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-              <p>Device: <span ng-bind="DeviceData.name"></span></p>
-              <p>Temp 1: <span ng-bind="DeviceData.tags.temp1 | number : 2"></span></p>
-              <p>Temp 2: <span ng-bind="DeviceData.tags.temp2 | number : 2"></span></p>
-              <p>Temp 3: <span ng-bind="DeviceData.tags.temp3 | number : 2"></span></p>
-              <p>Temp 4: <span ng-bind="DeviceData.tags.temp4 | number : 2"></span></p>
+              <p>Устройство: <b><span ng-bind="DeviceData.name"></span></b></p>
+            
+              <div class="table-responsive">
+                <table class="table table-striped table-sm">
+                  <thead> 
+                    <tr>
+                      <td>№</td>
+                      <td>Код параметра</td>
+                      <td>Наименование параметра</td>
+                      <td>Текущее значение</td>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr ng-repeat="t in Tags">
+                      <td ng-bind="$index + 1"></td>   
+                      <td ng-bind="t.code"></td>
+                      <td ng-bind="t.name"></td>
+                      <td ng-bind="t.value"></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
             </div>
             <!-- end Обзор -->        
 
@@ -101,7 +117,6 @@
             </div>
             <!-- end Журнал -->           
           </div>
-
         </div>
       </div>
       <!-- END CONTENT -->  
