--- a/react_app/src/App.css
+++ b/react_app/src/App.css
@@ -70,6 +70,29 @@
   overflow: auto;
 }
 
+
+.full-screen-button {
+  position: fixed;
+  left: 25px;
+  bottom: 20px;
+  z-index: 2;
+  color: #6c757d;
+  font-size: 1.8em;
+  border: none;
+  outline: none;
+  background-color: rgba(0, 0 , 0, 0.2);
+  border-radius: 50%;
+  padding: 0.4em;
+  transition: background-color 300ms;
+}
+.full-screen-button:hover {
+  background-color: rgba(0, 0 , 0, 0.8);
+}
+.full-screen-button:focus {
+  border: none;
+  outline: none;
+}
+
 /*------------------------------------ fix react-vis ------------------------------------*/
 .rv-discrete-color-legend-item {
   color: #f8f9fa !important;
