--- a/react_app/src/App.css
+++ b/react_app/src/App.css
@@ -157,12 +157,6 @@ input:-webkit-autofill:active  {
 	border: 1px solid blue;
 }
 
-.border-left {
-	border-left: 1px solid white;
-}
-.border-right {
-	border-right: 1px solid white;
-}
 .border-x {
 	border-right: 1px solid white;
 	border-left: 1px solid white;
@@ -180,4 +174,19 @@ input:-webkit-autofill:active  {
 }
 .btn-graph:hover {
   opacity: 1;
+}
+
+
+/*------------------------------------ modal ------------------------------------*/
+/* The Modal (background) */
+.modal-bg {
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
