small fixes and themes

--- a/react_app/src/App.css
+++ b/react_app/src/App.css
@@ -40,7 +40,7 @@
 
 
 
-/*------------------------------------ colors ------------------------------------*/
+/*------------------------------------ colors ------------------------------------
 .bg-color-indigo {
 	background-color: rgb(32,35,64) !important;
 }
@@ -54,7 +54,7 @@
 }
 .bg-color-dark-gray {
 	background-color: #1E1E1E !important;
-}
+} */ 
 
 /*------------------------------------ general ------------------------------------*/
 .header-height {
